--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,5 @@ ignore =
     W293 # blank line contains whitespaces
     E231 # missing whitespaces after ':' (walrus)
     E501  # 79 chars per line
-    W503 # Line break after binary operator
+    W503  # Line break after binary operator
+    W292  # Newline at end of the file
