--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [flake8]
 ignore = 
-    W291 # trailing whitespaces
-    W293 # blank line contains whitespaces
-    E231 # missing whitespaces after ':' (walrus)
+    W291  # trailing whitespaces
+    W293  # blank line contains whitespaces
+    E231  # missing whitespaces after ':' (walrus)
     E501  # 79 chars per line
     W503  # Line break after binary operator
     W292  # Newline at end of the file
+    E129  # Visually indented line witht the same indent as next logical line
