--- a/tox.ini
+++ b/tox.ini
@@ -7,3 +7,4 @@ ignore =
     W503  # Line break after binary operator
     W292  # Newline at end of the file
     E129  # Visually indented line witht the same indent as next logical line
+    E702  # multiple statement on one line
