--- a/tox.ini
+++ b/tox.ini
@@ -8,3 +8,4 @@ ignore =
     W292  # Newline at end of the file
     E129  # Visually indented line witht the same indent as next logical line
     E702  # multiple statement on one line
+    E265  # Block command should satart with a #
